--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
                 walking: "3.5 ק״מ",
                 stats: { culture: 25, food: 30, shopping: 25, transit: 20 },
                 timeline: [
-                    { time: "14:00 - 16:30", title: "נחיתה והגעה למלון", icon: "fa-plane-arrival", type: "transit", desc: "נחיתה, דרכונים, נסיעה למלון (Club Quarters Hotel) והתארגנות.", coords: { lat: 51.5166, lng: -0.1175 }, travelToNext: "🚶 8 דק' הליכה" },
+                    { time: "14:00", title: "נחיתה בסטנסטד (STN)", icon: "fa-plane", type: "transit", desc: "נחיתה בשדה התעופה סטנסטד. ביקורת דרכונים, איסוף כבודה ונסיעה לעיר (מומלץ Stansted Express).", coords: { lat: 51.8860, lng: 0.2389 }, travelToNext: "🚆 60 דק' (רכבת לעיר)" },
+                    { time: "16:30", title: "הגעה למלון והתארגנות", icon: "fa-suitcase", type: "transit", desc: "צ'ק-אין ב-Club Quarters Hotel (Lincoln's Inn Fields). התרעננות קצרה בחדר.", coords: { lat: 51.5166, lng: -0.1175 }, travelToNext: "🚶 10 דק' הליכה" },
                     { time: "17:00 - 18:15", title: "סיבוב כריסמס ראשון", icon: "fa-tree", type: "culture", desc: "הליכה לקובנט גרדן (השוק המקורה) וכיכר לסטר. אווירת חג ומופעי רחוב.", coords: { lat: 51.5117, lng: -0.1240 }, travelToNext: "🚶 6 דק' הליכה" },
                     { time: "18:15 - 19:00", title: "פיקדילי סירקוס", icon: "fa-video", type: "culture", desc: "המסכים המפורסמים והאורות של לונדון. הליכה קצרה מכיכר לסטר.", coords: { lat: 51.5101, lng: -0.1340 }, travelToNext: "🚶 5 דק' הליכה" },
                     { time: "19:00 - 20:00", title: "סוהו וצ'יינה טאון", icon: "fa-dragon", type: "culture", desc: "שיטוט ברחובות הצבעוניים של סוהו, השערים האדומים של צ'יינה טאון והפנסים.", coords: { lat: 51.5119, lng: -0.1300 }, travelToNext: "🚶 7 דק' הליכה" },
